--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -10,6 +10,13 @@ bevy = "0.12.1"
 build-deps = "0.1.4"
 clippy = "0.0.302"
 rust-analyzer = "0.0.1"
+jpeg-encoder = "0.6.0"
+rayon = "1.8.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+clippy = "0.0.302"
+rust-analyzer = "0.0.1"
+
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
