--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -14,7 +14,7 @@ jpeg-encoder = "0.6.0"
 rayon = "1.8.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-
+pyo3 = "0.20.2"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
