--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "I_will_Rust"
+crate-type = ["cdylib"]
+
 [dependencies]
 bevy = "0.12.1"
 build-deps = "0.1.4"
