--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -16,8 +16,8 @@ clippy = "0.0.302"
 rust-analyzer = "0.0.1"
 jpeg-encoder = "0.6.0"
 rayon = "1.8.0"
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
 pyo3 = "0.20.2"
 
 # Enable a small amount of optimization in debug mode
@@ -27,3 +27,9 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[dependencies]
+bevy = { version = "0.5", features = ["bevy_winit", "bevy_render", "bevy_wgpu", "bevy_wgpu_backend"] }
