--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,26 +1,24 @@
-name: CI
+name: Rust lint & test
 
-on:
-  push:
-
-    jobs:
-      lint:
-        runs-on: ubuntu-latest
-          steps:
-         - name: Checkout Crate
-            uses: actions/checkout@v3
-         - name: Set Toolchain
+on: push
+jobs:
+    lint:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Crate
+          uses: actions/checkout@v3
+        - name: Set Toolchain
             # https://github.com/dtolnay/rust-toolchain
-            uses: dtolnay/rust-toolchain@master
-            with:
+          uses: dtolnay/rust-toolchain@master
+      with:
               toolchain: stable
               components: rustfmt, clippy
-               - name: Run check
-                  run: cargo check
-              - name: Run rustfmt
-                  run: cargo fmt --all -- --check
-              - name: Run clippy
-                  run: cargo clippy -- -D warnings
+         - name: Run check
+            run: cargo check
+         - name: Run rustfmt
+            run: cargo fmt --all -- --check
+         - name: Run clippy
+            run: cargo clippy -- -D warnings
               
         test:
           runs-on: ubuntu-latest
