--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -21,8 +21,7 @@ serde_json = "1.0.111"
 pyo3 = "0.20.2"
 nalgebra = "0.32.3"
 
-avr-hal = "0.1"
-atmega328p-hal = "0.1"
+arduino-hal = "0.18.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
