--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -10,16 +10,16 @@ name = "I_will_Rust"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["bevy_winit", "bevy_render", "bevy_wgpu", "bevy_wgpu_backend"] }
+bevy = "0.15.1"
 build-deps = "0.1.4"
 clippy = "0.0.302"
 rust-analyzer = "0.0.1"
 jpeg-encoder = "0.6.0"
-rayon = "1.8.0"
-serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.111"
-pyo3 = "0.21.1"
-nalgebra = "0.32.3"
+rayon = "1.10.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.137"
+pyo3 = "0.23.4"
+nalgebra = "0.33.2"
 
 ruduino = "0.3.2"
 
