--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
-[workspace]
-members = [
-    "gui",
-    "dioxus",
-]
+[package]
+name = "I-will-Rust"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
