--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
-[package]
-name = "I-will-Rust"
-version = "0.1.0"
-edition = "2021"
+# [package]
+# name = "fullerene"
+# version = "0.1.0"
+# edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[workspace]
+members = [
+  "bellows", "fullerene-kernel",
+  "toluene",
+]
