Add target triple

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ members = [
   "bellows", "flasks", "fullerene-kernel",
   "toluene",
 ]
+resolver = "2"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
