--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 crate-type = ["staticlib"]  # Notes: PE/COFF (EFI)
 
 [dependencies]
+linked_list_allocator = "0.10.5"
 uefi = { version = "0.35.0", default-features = false, features = ["alloc"] }
 
 [profile.release]
