--- a/fullerene-kernel/.cargo/config.toml
+++ b/fullerene-kernel/.cargo/config.toml
@@ -1,7 +1,7 @@
 [build]
-target = "x86_64-unknown-uefi.json"
+target = "x86_64-uefi.json"
 
-[target.x86_64-unknown-none]
+[target.x86_64-uefi]
 rustflags = [
     "-C", "link-arg=-nostartfiles",
 ]
