--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -11,6 +11,7 @@ linked_list_allocator = "0.10.5"
 uefi = "0.35.0"
 uefi-raw = "0.11.0"
 uefi-macros = "0.18.1"
+uefi-services = "0.26.0"
 
 [profile.release]
 panic = "abort"
