--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -3,13 +3,16 @@ name = "bellows"
 version = "0.1.0"
 edition = "2024"
 
-[lib]
-crate-type = ["staticlib"]  # Notes: PE/COFF (EFI)
+[[bin]]
+name = "bellows"
+path = "src/main.rs"
+
+
+# [lib]
+# crate-type = ["staticlib"]  # Notes: PE/COFF (EFI)
 
 [dependencies]
 linked_list_allocator = "0.10.5"
-uefi = "0.35.0"
-uefi-macros = "0.18.1"
 
 [profile.release]
 panic = "abort"
