#3 PR review respond

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 # fullerene-kernel/Cargo.toml
 [dependencies]
-spin = { version = "0.10.0", default-features = false, features = ["once"] }
+spin = { version = "0.10.0", default-features = false, features = ["once", "mutex", "spin_mutex"] }
 x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
 # Omit the build-std flags in the Cargo.toml file.
 # They are typically passed as command-line arguments.
