--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -10,3 +10,8 @@ x86_64 = { version = "0.15.2", default-features = false, features = ["instructio
 # Omit the build-std flags in the Cargo.toml file.
 # They are typically passed as command-line arguments.
 # For example: cargo build -Z build-std=core,compiler_builtins
+
+[dependencies.compiler_builtins]
+version = "0.1.160"
+default-features = false
+features = ["mem", "no-asm"]
