--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 [dependencies]
 spin = { version = "0.10.0", default-features = false, features = ["once", "mutex", "spin_mutex"] }
 x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
+uefi = { version = "0.27.0", default-features = false }
+uefi-services = { version = "0.24.0", default-features = false }
 # Omit the build-std flags in the Cargo.toml file.
 # They are typically passed as command-line arguments.
 # For example: cargo build -Z build-std=core,compiler_builtins
