--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -7,9 +7,5 @@ edition = "2024"
 [dependencies]
 spin = { version = "0.10.0", default-features = false, features = ["once", "mutex", "spin_mutex"] }
 x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
-# Removed uefi and uefi-services dependencies as per your request for bare-metal VGA output
-
-[dependencies.compiler_builtins]
-version = "0.1.160"
-default-features = false
-features = ["mem", "no-asm"]
+log = "0.4.21"
+uefi = { version = "0.35.0", features = ["global_allocator", "alloc", "panic_handler", "logger"] }
