--- a/flasks/Cargo.toml
+++ b/flasks/Cargo.toml
@@ -4,9 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-fatfs = "0.3.6"
-gpt = "4.1.0"
-hadris-iso = "0.0.2"
-path-absolutize = "3.1.1"
-tempfile = "3.22.0"
-uuid = "1.18.1"
+isobemak = { path = "../../isobemak" }
