--- a/flasks/Cargo.toml
+++ b/flasks/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 isobemak = { path = "../../isobemak" }
+serde = { version = "1.0.224", features = ["derive"] }
 serde_json = "1.0"
