--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -4,8 +4,17 @@ name = "fullerene-kernel"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "fullerene-kernel"
+path = "src/main.rs"
+
 [dependencies]
 spin = { version = "0.10.0", default-features = false, features = ["once", "mutex", "spin_mutex"] }
 x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
-log = "0.4.21"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
 
