--- a/bellows/.cargo/config.toml
+++ b/bellows/.cargo/config.toml
@@ -1,13 +1,9 @@
-[unstable]
-build-std = ["core", "alloc", "compiler_builtins"]
-build-std-features = ["compiler-builtins-mem"]
-
 [build]
-target = "x86_64-unknown-uefi"
+target = "x86_64-fullerene-kernel"
 
-[target.x86_64-unknown-uefi]
-linker = "rust-lld"
-rustflags = [
-    "-C", "link-arg=-nostdlib",
-    "-C", "link-arg=-Tlinker.ld",
-]
+[target.x86_64-fullerene-kernel]
+runner = "bootimage"
+
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
