--- a/fullerene-kernel/.cargo/config.toml
+++ b/fullerene-kernel/.cargo/config.toml
@@ -1,3 +1,3 @@
-[unstable]
-build-std = ["core", "alloc", "compiler_builtins"]
-build-std-features = ["compiler-builtins-mem"]
+# [unstable]
+# build-std = ["core", "alloc", "compiler_builtins"]
+# build-std-features = ["compiler-builtins-mem"]
