--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,7 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-fullerene.img
+fullerene.fat
 fullerene.iso
 qemu_log.txt
 serial_log.txt
-mnt/
-tmp/
-esp.img
-iso_root
