--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -2,7 +2,7 @@
 [package]
 name = "fullerene-kernel"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 x86_64 = { version = "0.15.2", default-features = false, features = [
@@ -15,9 +15,15 @@ spin = { version = "0.10.0", default-features = false, features = [
   "spin_mutex",
 ] }
 bitflags = { version = "2.9.4", default-features = false, features = [] }
-lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
+lazy_static = { version = "1.5.0", default-features = false, features = [
+  "spin_no_std",
+] }
 pc-keyboard = { version = "0.8.0", default-features = false }
-pic8259 = { version = "0.11.0", default-features = false, features = ["nightly"] }
+pic8259 = { version = "0.11.0", default-features = false, features = [
+  "nightly",
+] }
+
+linked_list_allocator = "0.10.5"
 
 petroleum = { path = "../petroleum" }
 
