fix(loader): Improve memory map acquisition and PE relocation handling
This commit enhances the robustness of the bootloader's memory map acquisition and refines PE image relocation processing.

**Memory Map Acquisition (`bellows/src/loader/mod.rs`):**
The logic for `exit_boot_services_and_jump` has been improved to handle `BufferTooSmall` errors more gracefully during memory map retrieval. Instead of immediately failing after multiple attempts, the `map_key` is now reset to 0, allowing the UEFI firmware to provide a new key and potentially resolve transient issues, making the boot process more resilient. Debugging print statements were also added.

**PE Image Relocation (`bellows/src/loader/pe.rs`):**
The access to the `ImageDataDirectory` for the relocation table has been updated to use `ptr::read_unaligned` and `offset_of!`. This addresses potential unaligned memory access issues when reading the PE header structures. Additionally, the relocation block pointer is now correctly typed as `*const ImageBaseRelocation` since it's used for reading, and debugging print statements were added to aid in understanding the relocation process.

**Build Configuration (`bellows/Cargo.toml`):**
Added `profile-rustflags` feature and configured `dev` and `release` profiles to use `codegen-units = 1` and `rustflags = ["-C", "target-feature=-red-zone"]`. The `-red-zone` flag is crucial for low-level environments like bootloaders to prevent stack corruption, while `codegen-units = 1` can aid in optimization.

--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["profile-rustflags"]
+
 [package]
 name = "bellows"
 version = "0.1.0"
@@ -6,6 +8,14 @@ edition = "2024"
 [[bin]]
 name = "bellows"
 path = "src/main.rs"
+
+[profile.dev]
+codegen-units = 1
+rustflags = ["-C", "target-feature=-red-zone"]
+
+[profile.release]
+codegen-units = 1
+rustflags = ["-C", "target-feature=-red-zone"]
 
 [dependencies]
 linked_list_allocator = "0.10.5"
