--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -21,3 +21,4 @@ rustflags = ["-C", "target-feature=-red-zone"]
 linked_list_allocator = "0.10.5"
 spin = "0.10.0"
 petroleum = { path = "../petroleum" }
+x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
