refactor(heap): replace linked_list_allocator with custom bump allocator
Replace the heap implementation in fullerene-kernel with a simple bump allocator to reduce dependencies and support BIOS mode. Add Heap struct, Locked wrapper, and GlobalAlloc trait implementation. Update bellows allocation to use AllocateAnyPages for flexibility. Modify flasks build script to conditionally build bellows and increase QEMU memory to 4G. Add x86_64 dependency to petroleum package. This simplifies the heap management and improves compatibility.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-spin = { version = "0.10.0", default-features = false }
+spin = { version = "0.10.0", default-features = false, features = [
+  "once",
+  "mutex",
+  "spin_mutex",
+] }
+x86_64 = { version = "0.15.2", default-features = false, features = [
+  "instructions",
+  "abi_x86_interrupt",
+] }
