feat(petroleum): enable std feature and update kernel heap initialization
- Add "std" feature to petroleum crate to conditionally use std alloc and panic handlers
- Update fullerene-kernel to enable petroleum's std feature
- Refactor heap pointer initialization in kernel to use safer addr_of_mut! macro
- Adjust cfg conditions in petroleum to exclude handlers when std feature is active

This allows petroleum to leverage std library when available, improving compatibility and safety in heap management.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -3,6 +3,10 @@ name = "petroleum"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+std = []
+
 [dependencies]
 spin = { version = "0.10.0", default-features = false, features = [
   "once",
