refactor: centralize panic handling in petroleum crate
Remove duplicate panic handlers from bellows and fullerene-kernel binaries,
introduce reusable handle_panic function in petroleum lib.rs, and add bitflags
dependency for potential flag usage in page table or other modules. This
reduces code duplication and improves maintainability across UEFI-based projects.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -17,3 +17,4 @@ x86_64 = { version = "0.15.2", default-features = false, features = [
   "instructions",
   "abi_x86_interrupt",
 ] }
+bitflags = { version = "2.9.4", default-features = false }
