refactor(bootloader): simplify heap init and centralize panic handling
- Add panic = "abort" to dev profiles in Cargo.toml files for better performance in development
- Replace error-handling heap initialization with expect() in bellows, assuming success
- Update panic handler in fullerene-kernel to use petroleum::handle_panic for centralized error reporting
- Remove early heap and serial init code from fullerene-kernel efi_main to streamline boot process

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -23,6 +23,7 @@ petroleum = { path = "../petroleum" }
 [profile.dev]
 debug = true
 split-debuginfo = "packed"
+panic = "abort"
 
 [profile.release]
 debug = true
