--- a/toluene/Cargo.toml
+++ b/toluene/Cargo.toml
@@ -3,4 +3,12 @@ name = "toluene"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "toluene"
+path = "src/main.rs"
+
+[[test]]
+name = "unit_tests"
+path = "tests/unit_tests.rs"
+
 [dependencies]
