--- a/flasks/Cargo.toml
+++ b/flasks/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-isobemak = { path = "../../isobemak"}
+isobemak = "0.2.3"
 tempfile = "3.22.0"
