ci: update doc generation to use --all-features instead of --all-targets
Changed cargo doc commands in build-and-test, merge, and release workflows to use --all-features, ensuring documentation includes all optional features for better coverage and accuracy. This replaces --all-targets, which only built for multiple targets but might not enable features.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -98,6 +98,6 @@ jobs:
           workspaces: "./ -> target"
 
       - name: Check documentation
-        run: cargo +nightly doc --document-private-items --no-deps --all-targets
+        run: cargo +nightly doc --document-private-items --no-deps --all-features
         env:
           RUSTDOCFLAGS: -D warnings
