refactor: clean up unused code, imports, and build profiles
Remove unused imports, macros, and panic handling code in various modules, simplify imports in heap.rs, and update Cargo.toml profiles to set panic=abort while removing red-zone rustflags for cleaner no_std builds and reduced binary size. Add explicit unsafe blocks in layer functions for better safety and clarity.

--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -10,12 +10,10 @@ name = "bellows"
 path = "src/main.rs"
 
 [profile.dev]
-codegen-units = 1
-rustflags = ["-C", "target-feature=-red-zone"]
+panic = "abort"
 
 [profile.release]
-codegen-units = 1
-rustflags = ["-C", "target-feature=-red-zone"]
+panic = "abort"
 
 [dependencies]
 linked_list_allocator = "0.10.5"
