feat: enable memory map config and boot services exit in UEFI loader
- Update lock_api dependency to v0.4.14, removing autocfg dep in Cargo.lock
- Add debug_loader feature and optimize release profile in bellows Cargo.toml
- Uncomment and enable installing FullereneMemoryMap config table and exiting boot services in loader/mpd.rs
- Consolidate VGA register setup into single helper function and add legacy wrappers in graphics.rs for cleaner initialization

--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -9,10 +9,15 @@ edition = "2024"
 name = "bellows"
 path = "src/main.rs"
 
+[features]
+debug_loader = []
+
 [profile.dev]
 panic = "abort"
 
 [profile.release]
+codegen-units = 1
+rustflags = ["-C", "target-feature=-red-zone"]
 panic = "abort"
 
 [dependencies]
