feat: Add interrupt handlers for timer/key/mouse and unit tests for toluene
- Implement basic timer tick counter and I/O buffering for keyboard scancode and mouse movement/clicks in fullerene-kernel interrupts.rs to enable simple input handling in the OS kernel.
- Add lib configuration and basic unit tests for add function in toluene to establish care testing structure for the crate.

--- a/toluene/Cargo.toml
+++ b/toluene/Cargo.toml
@@ -11,4 +11,8 @@ path = "src/main.rs"
 name = "unit_tests"
 path = "tests/unit_tests.rs"
 
+[lib]
+name = "toluene"
+path = "src/lib.rs"
+
 [dependencies]
