--- a/toluene/Cargo.toml
+++ b/toluene/Cargo.toml
@@ -3,16 +3,24 @@ name = "toluene"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "toluene"
+path = "src/lib.rs"
+crate-type = ["rlib"]
+
 [[bin]]
 name = "toluene"
 path = "src/main.rs"
+required-features = ["binary"]
 
 [[test]]
 name = "unit_tests"
 path = "tests/unit_tests.rs"
+required-features = ["test"]
 
-[lib]
-name = "toluene"
-path = "src/lib.rs"
+[features]
+default = []
+binary = []
+test = []
 
 [dependencies]
