refactor: clean up unused imports, remove dead code, and add kernel features
- Move common graphics, VGA, and common types to petroleum crate dependency
- Remove unnecessary #![no_std], feature flags, and imports from process, syscall, and vga modules
- Add user_space and vga_panic features to fullerene-kernel and petroleum Cargo.toml
- Optimize IoApicRedirectionEntry creation and remove unused IOAPIC constants for APIC setup

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -20,6 +20,10 @@ lazy_static = { version = "1.5.0", default-features = false, features = [
 
 petroleum = { path = "../petroleum" }
 
+[features]
+default = []
+user_space = []
+
 [profile.dev]
 debug = true
 split-debuginfo = "packed"
