feat: integrate embedded-graphics crate for optimized text rendering
Add embedded-graphics dependency to fullerene-kernel and refactor graphics.rs to use the crate for text rendering, replacing custom font handling with MonoTextStyle and DrawTarget. This simplifies code complexity, improves efficiency through batcher processing, and ensures compatibility with embedded-graphics style fonts. The former manual 8x8 font and positioning logic is removed in favor of standardized GIF handling.

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = { version = "1.5.0", default-features = false, features = [
 ] }
 
 petroleum = { path = "../petroleum" }
+embedded-graphics = { version = "0.8", default-features = false }
 
 [features]
 default = []
