--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = { version = "1.5.0", default-features = false, features = [
 
 petroleum = { path = "../petroleum" }
 embedded-graphics = { version = "0.8", default-features = false }
+memoffset = { version = "0.9", default-features = false }
 
 [features]
 default = []
