--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -18,6 +18,7 @@ x86_64 = { version = "0.15.2", default-features = false, features = [
   "instructions",
   "abi_x86_interrupt",
 ] }
+linked_list_allocator = "0.10"
 
 [lib]
 name = "petroleum"
