fix(ci): add flasks check step to merge workflow per .clinerules rules

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -31,6 +31,9 @@ jobs:
           workspaces: "./ -> target"
 
 
+      - name: Clear cache and run flasks
+        run: cargo clean && cargo run -p flasks
+
       - name: Run comprehensive tests
         run: |
           cargo test --package toluene --verbose
