--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -19,6 +19,7 @@ x86_64 = { version = "0.15.2", default-features = false, features = [
   "abi_x86_interrupt",
 ] }
 linked_list_allocator = "0.10"
+embedded-graphics = "0.8.1"
 
 [lib]
 name = "petroleum"
