ci: fix rustup command to add uefi target instead of component
- Corrected 'rustup component add' to 'rustup target add' for proper target installation in the merge workflow.

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -23,7 +23,7 @@ jobs:
         run: rustup component add rust-src --toolchain nightly
 
       - name: Install x86_64-unknown-uefi target
-        run: rustup component add x86_64-unknown-uefi --toolchain nightly
+        run: rustup target add x86_64-unknown-uefi --toolchain nightly
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
