--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -25,6 +25,7 @@ lazy_static = { version = "1.5.0", default-features = false, features = [
 petroleum = { path = "../petroleum" }
 embedded-graphics = { version = "0.8", default-features = false }
 memoffset = { version = "0.9", default-features = false }
+linked_list_allocator = { version = "0.10", default-features = false, features = ["alloc_ref"] }
 
 [features]
 default = []
