refactor(logging): consolidate logging module into petroleum crate
- Moved logging module from fullerene-kernel to petroleum/common
- Removed logging re-exports from fullerene-kernel lib.rs
- Added logging macros to petroleum common macros
- Cleaned up unused imports in traits and types modules
- Added once_cell dependency for shared state management

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -19,6 +19,7 @@ x86_64 = { version = "0.15.2", default-features = false, features = [
   "abi_x86_interrupt",
 ] }
 linked_list_allocator = "0.10"
+once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
 embedded-graphics = "0.8.1"
 
 [lib]
