--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -26,6 +26,13 @@ petroleum = { path = "../petroleum" }
 embedded-graphics = { version = "0.8", default-features = false }
 memoffset = { version = "0.9", default-features = false }
 linked_list_allocator = { version = "0.10", default-features = false, features = ["alloc_ref"] }
+goblin = { version = "0.10.2", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
+bitfield = "0.19.3"
+static_assertions = "1.1"
+bitflags = "2.4"
+volatile = "0.6"
+pc-keyboard = "0.8.0"
+# shell-words = "1.1"  # Cannot use in no_std kernel
 
 [features]
 default = []
