--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -21,6 +21,11 @@ x86_64 = { version = "0.15.2", default-features = false, features = [
 linked_list_allocator = "0.10"
 once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }
 embedded-graphics = "0.8.1"
+volatile = "0.6"
+heapless = { version = "0.8", default-features = false }
+bitflags = "2.4"
+conquer-util = { version = "0.3", default-features = false }
+static_assertions = "1.1"
 
 [lib]
 name = "petroleum"
