refactor: integrate log crate for standardized logging
Add the `log` crate dependency to fullerene-kernel and petroleum Cargo.toml files, replacing custom logging utilities with the standard log macros (e.g., `log::info!`, `log::error!`) across the codebase.

This change enforces a unified logging facade for better consistency and interoperability in the Fullerene OS kernel and related crates.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -26,6 +26,7 @@ heapless = { version = "0.8", default-features = false }
 bitflags = "2.4"
 conquer-util = { version = "0.3", default-features = false }
 static_assertions = "1.1"
+log = { version = "0.4.28", default-features = false }
 
 [lib]
 name = "petroleum"
