--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -32,6 +32,7 @@ static_assertions = "1.1"
 bitflags = "2.4"
 volatile = "0.6"
 pc-keyboard = "0.8.0"
+log = { version = "0.4.28", default-features = false }
 # shell-words = "1.1"  # Cannot use in no_std kernel
 
 [features]
