--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -26,3 +26,4 @@ linked_list_allocator = "0.10.5"
 spin = "0.10.0"
 petroleum = { path = "../petroleum" }
 x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
+log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }
