feat: enable lib crate-type for multiple components and refactor code structure
- Add [lib] sections to Cargo.toml files for bellows, flasks, fullerene-kernel, and petroleum to support building as libraries
- Move detect_standard_modes helper to petroleum/lib.rs and update usage in bare_metal_graphics_detection
- Refactor fullerene-kernel boot macros by removing macro_use and adding new kernel_print/ln macros with proper export

--- a/bellows/Cargo.toml
+++ b/bellows/Cargo.toml
@@ -5,6 +5,11 @@ name = "bellows"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "bellows"
+path = "src/lib.rs"
+crate-type = ["lib"]
+
 [[bin]]
 name = "bellows"
 path = "src/main.rs"
