refactor(kernel): separate UEFI and BIOS initialization paths
- Allocate dedicated kernel stack in UEFI mode to prevent corruption and switch RSP prior to interrupt init
- Conditionalize GDT loading for BIOS mode only, avoiding redundancy in UEFI boot
- Update workspace Cargo.toml with shared package metadata, streamlined profiles, and disable overflow-checks
- Refine fullerene-kernel dependencies to default-features = false for no-std compatibility
- Simplify bellows crate config to binary-only, removing lib crate-type
- Enhances kernel reliability across boot methods and optimizes no_std builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
 [workspace]
-members = [
-  "bellows",
-  "flasks",
-  "fullerene-kernel",
-  "petroleum",
-  "toluene",
-]
-resolver = "2"
+members = ["bellows", "flasks", "fullerene-kernel", "petroleum", "toluene"]
 
 [profile.dev]
 panic = "abort"
+overflow-checks = false
 
 [profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
+panic = "abort"
+overflow-checks = false
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+authors = ["p14c31355"]
