--- a/flasks/Cargo.toml
+++ b/flasks/Cargo.toml
@@ -16,3 +16,5 @@ path = "src/main.rs"
 isobemak = "0.2.3"
 tempfile = "3.22.0"
 clap = { version = "4.5", features = ["derive"] }
+log = { version = "0.4.28", default-features = false }
+simple_logger = "4.0"
