refactor(graphics): centralize UI colors and utilities in petroleum module
Move color constants and calc_text_width function from desktop.rs to petroleum/graphics/color.rs to eliminate code duplication. Add GUI drawing macros and Button struct for shared use. Include heapless dependency required for the new structures in no_std environment. This improves maintainability and consistency across the kernel's graphics components.

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -37,6 +37,7 @@ bitflags = { version = "2.4", default-features = false }
 volatile = { version = "0.6", default-features = false }
 pc-keyboard = { version = "0.8.0", default-features = false }
 log = { version = "0.4.28", default-features = false }
+heapless = { version = "0.8", default-features = false }
 # shell-words = "1.1"  # Cannot use in no_std kernel
 
 [features]
