refactor: replace manual volatile writes and error conversions with petroleum macros
- Add 'paste' and 'bitfield' crates to dependencies via Cargo.lock update
- Replace core::ptr::write_volatile calls in main.rs with safer petroleum::volatile_write! macro
- Simplify error handling in errors.rs by replacing manual From implementations with petroleum::error_chain! macro

This reduces boilerplate, improves code consistency, and leverages petroleum's abstractions for better maintainability and safety in the kernel codebase.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -27,6 +27,8 @@ bitflags = "2.4"
 conquer-util = { version = "0.3", default-features = false }
 static_assertions = "1.1"
 log = { version = "0.4.28", default-features = false }
+paste = "1.0"
+bitfield = "0.19"
 
 [lib]
 name = "petroleum"
